Add scope topics and CFP

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -654,26 +654,63 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Other Sections
 --------------------------------------------------------------*/
 
-#aims, #organizers, #structure, #resources, #objectives, #abstract, #topics, #dates, #submission, #committee, #program, #attending, #contacts, #editions, #registration, #about, #speakers, #venue {
+#aims, #organizers, #structure, #resources, #objectives, #abstract, #topics, #dates, #submission, #committee, #program, #attending, #contacts, #editions, #registration, #about, #speakers, #venue, #keynote {
   padding: 60px 0 30px 0;
 }
 
-#aims .container-fluid, #organizers .container-fluid, #editions .container-fluid, #structure .container-fluid, #registration .container-fluid, #resources .container-fluid, #objectives .container-fluid, #abstract .container-fluid, #topics .container-fluid, #dates .container-fluid, #submission .container-fluid, #committee .container-fluid, #program .container-fluid, #attending .container-fluid, #contacts .container-fluid, #about .container-fluid, #speakers .container-fluid, #venue .container-fluid {
+#aims .container-fluid, #organizers .container-fluid, #editions .container-fluid, #structure .container-fluid, #registration .container-fluid, #resources .container-fluid, #objectives .container-fluid, #abstract .container-fluid, #topics .container-fluid, #dates .container-fluid, #submission .container-fluid, #committee .container-fluid, #program .container-fluid, #attending .container-fluid, #contacts .container-fluid, #about .container-fluid, #speakers .container-fluid, #venue .container-fluid, #keynote .container-fluid {
   margin-bottom: 3px;
 }
 
-#audience > div > div > ul, #aims > div > div > ul, #organizers > div > div > ul, #editions > div > div > ul, #registration > div > div > ul, #structure > div > div > ul, #resources > div > div > ul, #objectives > div > div > ul, #abstract > div > div > ul, #topics > div > div > ul, #dates > div > div > ul, #submission > div > div > ul, #committee > div > div > ul, #program > div > div > ul, #attending > div > div > ul, #contacts > div > div > ul, #about > div > div > ul, #speaker > div > div > ul, #venue > div > div > ul {
+#audience > div > div > ul, #aims > div > div > ul, #organizers > div > div > ul, #editions > div > div > ul, #registration > div > div > ul, #structure > div > div > ul, #resources > div > div > ul, #objectives > div > div > ul, #abstract > div > div > ul, #topics > div > div > ul, #dates > div > div > ul, #submission > div > div > ul, #committee > div > div > ul, #program > div > div > ul, #attending > div > div > ul, #contacts > div > div > ul, #about > div > div > ul, #speaker > div > div > ul, #venue > div > div > ul, #keynote > div > div > ul {
     text-align: left;
     padding: 0;
     margin: 10px auto 30px auto;
     font-size: 18px;
     font-weight: 500;
     color: #000;
-    width: 47%;
+    width: 92%;
 }
 
 #organizers img {
   border-radius: 50%;
+}
+
+/*--------------------------------------------------------------
+# Services - topic-box
+--------------------------------------------------------------*/
+
+.topic-box {
+  width: 100%;
+}
+
+.services .topic-box {
+  padding: 30px 30px;
+  transition: all ease-in-out 0.3s;
+  background: rgba(14, 27, 77, 0.1);
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.1);
+  border-radius: 18px;
+  border-bottom: 6px solid rgba(14, 27, 77, 0.1);
+  /* border-top: 2px solid #0e1b4d;
+  border-right: 2px solid #0e1b4d;
+  border-left: 2px solid #0e1b4d; */
+}
+
+.services .topic-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.services .topic-box h4 a {
+  color: #0e1b4d;
+  transition: ease-in-out 0.3s;
+}
+
+.services .topic-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
 }
 
 /*--------------------------------------------------------------
